# python-lib

./: cookiecutter.json
{{cookiecutter.hyphenated}}/: LICENSE  README.md  setup.cfg
